# MicSE

./: .gitignore  .ocamlformat  2ade.txt  2ade2.txt  2ade3.txt  2ade4.txt  2ade5.txt  LICENSE  Makefile  README.md  Vagrantfile  asdf.txt  bootstrap.sh  dune-project  hi2.txt  hi3.txt  micse.opam  nohup.out
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_proposal.md
.github/workflows/: build_and_tests.yml  main.yml
benchmarks/examples/: airdrop.py  airdrop.tz  deposit.py  deposit.storage.tz  powerturtle.py  powerturtle1.tz  powerturtle2.tz  powerturtle2_guarded.tz  powerturtle3.tz  toOwner.py  toOwner.tz  transfer.py  transfer.storage.tz  transfer.tz  transferFrom.py  transferFrom.tz  transferFrom_fixed.py  transferFrom_fixed.tz  transfer_safe.tz  transfer_storage_init.tz  transfer_vuln.tz
benchmarks/live_contracts/: 2ade5b81b1e62793dd9073ba8b26be2bd57c6239906fe867340ff5761810befc_storage.tz  39aa141291b95f66a476d2da82a5c59bc163c3125273ba15781a999cb6ce2518_storage.tz  7e5a7c1ae1224be82b44769dede1652895461b4e80c96e771e2ab809d67e23b1_storage.tz  KT18jF2bCerNgrkyk7qd1Bpk9gKnpPKJAvjB.tz  KT1BPrMaPxtKo2ip9vhgAfEP1QdhCETYyemj.tz  KT1BvVxWM6cjFuJNet4R9m64VDCN2iMvjuGE.tz  KT1CT7S2b9hXNRxRrEcany9sak1qe4aaFAZJ.tz  KT1GgUJwMQoFayRYNwamRAYCvHBLzgorLoGo.tz  KT1HdMf7N7f6GgMuwieYeixpBwCsfvH6yXfW.tz  KT1JMFs8MitF3gceCUKZzEXzCTdkKYgZGkf3.tz  KT1Jz8MjnC3t6Prw5Dr6iiDBGmyMXkQsjPuy.tz  KT1Puc9St8wdNoGtLiD2WXaHbWU7styaxYhD.tz  KT1Puc9St8wdNoGtLiD2WXaHbWU7styaxYhD_storage.tz  KT1Qoi3ifeT8jsq29QRaHoCpMp9ZjeBiSasR_storage.tz  KT1RKXjb3Wcy3aofZFU77dhN6JSjj5gWRgdc.tz  KT1SL6CGhjPUyLypDbFv9bXsNF2sHG7Fy3j9.tz  KT1SL6CGhjPUyLypDbFv9bXsNF2sHG7Fy3j9_storage.tz  KT1Sc2dHqCRLQV9gWLmUndQyowVrv12AtcJi.tz  KT1UMJwse4X8pXjSX1THZCNTDYCCiVLi5Gdv.tz  KT1Um7ieBEytZtumecLqGeL56iY6BuWoBgio.tz  KT1Um7ieBEytZtumecLqGeL56iY6BuWoBgio_storage.tz  KT1WRUe3csC1jiThN9KUtaji2bd412upfn1E.tz  a718ee7c2300797d353c96968907575ca756ca30c3204ca186f3dc256c846b35_storage.tz  bd08fc2b11cb47405e22cc8bce9abc7c9a280b5c181733e38297dbddf3546e00_storage.tz
benchmarks/mutez_active_live2/: bd08fc2b11cb47405e22cc8bce9abc7c9a280b5c181733e38297dbddf3546e00_storage.tz
benchmarks/normal_top/: KT1AbYeDbjjcAnV1QK7EZUUdqku77CdkTuv6.tz  KT1BfZt3DgoxTcfTyppVFndfobZhr8CeezDP.storage.tz  KT1BfZt3DgoxTcfTyppVFndfobZhr8CeezDP.tz  KT1BvVxWM6cjFuJNet4R9m64VDCN2iMvjuGE.tz  KT1CSKPf2jeLpMmrgKquN2bCjBTkAcAdRVDy.storage.tz  KT1CSKPf2jeLpMmrgKquN2bCjBTkAcAdRVDy.tz  KT1CpeSQKdkhWi4pinYcseCFKmDhs5M74BkU.storage.tz  KT1CpeSQKdkhWi4pinYcseCFKmDhs5M74BkU.tz  KT1GgUJwMQoFayRYNwamRAYCvHBLzgorLoGo.tz  (+10 more)
cmd/: advanced_trxpath_refuter.ml  dune  main.ml  micse_prover.ml  naive_prover.ml  naive_refuter.ml  naive_trxpath_main.ml  naive_trxpath_refuter.ml
dependencies/michelson/: .gitignore  .gitlab-ci.yml  README.md  dune-project  michelson.opam
dependencies/michelson/scripts/: ci-build.sh
dependencies/michelson/src/lib/: adt.ml  adt.mli  dune  gadt.ml#  lexer.mll  location.mli  parser.mly  pp.ml
dependencies/tezla/: .gitlab-ci.yml  LICENSE  README.md  dune-project  tezla.opam
dependencies/tezla-cfg/: .gitignore  .gitlab-ci.yml  README.md  dune-project  tezla-cfg.opam
dependencies/tezla-cfg/src/lib/: cfg_node.ml  cfg_node.mli  dune  flow.ml  flow_graph.ml  flow_graph.mli  node_specifics.ml  sig.mli
dependencies/tezla/src/lib/: adt.ml  adt.mli  converter.ml  dune  env.ml  env.mli  functional_stack.ml  functional_stack.mli  parsing_utils.ml  pp.ml
doc/: INSTALLATION.md  USAGE.md
lib/: dune  execFlow.ml  igdt.ml  igdt.mli  inv.ml  inv.mli  lexer.mll  lib.ml  mState.ml  mState.mli  manage.ml  manage.mli  merge.ml  merge.mli  mich.ml  mich.mli  michLexer.mll  michParse.ml  michParse.mli  michParser.mly  modtyps.mli  prove.ml  prove.mli  refute.ml  refute.mli  res.ml  res.mli  se.ml  se.mli  sexpUtil.ml  smt.ml  smt.mli  te.ml  te.mli  tz.ml  tz.mli  tzUtil.ml  tzUtil.mli  vc.ml  vc.mli
script/: .env  micse_env.py  micse_main.py  micse_post.py  micse_run.py  requirements.txt
scripts/: .env  run_benchmark.py  run_benchmark_stacked.py
src/: dune  main.ml  stackmain.ml
test/: dune  integ_test.ml  test.ml  test_naive_refute.ml  test_sample.ml  test_upto_se.ml
utils/: argument.ml  argument.mli  dune  log.ml  log.mli  memory.ml  memory.mli  time.ml  time.mli  utils.ml
(+265 files in other folders)
