(lang dune 2.03)

(name tezla)

(generate_opam_files true)

(source
 (uri "git+https://gitlab.com/releaselab/fresco/tezla.git"))

(bug_reports "https://gitlab.com/releaselab/fresco/tezla/issues")

(homepage "https://gitlab.com/releaselab/fresco/tezla")

(license MIT)

(authors "Jo\195\163o Santos Reis <joao.reis@ubi.pt>")

(maintainers "Jo\195\163o Santos Reis <joao.reis@ubi.pt>")

(package
 (name tezla)
 (synopsis "An intermediate representation of the Michelson language")
 (depends
  (dune :build)
  (zarith :build)
  (batteries :build)
  (michelson :build)))
