(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "(preprocess (pps bisect_ppx))"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|

(library
 (name tezla_cfg)
 (public_name tezla-cfg)
 (libraries michelson tezla batteries ocamlgraph)
 (modules_without_implementation sig)
 |} ^ preprocess ^ {|)

|}
